SVN::Pusher changelog:

* 0.01
    - Placed Pusher.pm in lib/SVN/Pusher.pm
    - Removed the redundant stuff from lib/SVN/Pusher.pm which remained
    there from SVN::Push.
    - Created the $sp->report() method for a derived class to perform a
    print. Moved the print() themselves to SVN::Pusher::CmdLine. That way,
    the main module has no side effects.

    
* 0.00_03 - forked from SVN-Push, converted the functionality to work with
a modern SVN, and with what we wanted to do (just changeset propagation -
nothing more, nothing less).




SVN::Push changelog:
--------------------

- 0.02

  * fixed problem with startrev argument. Now HEAD means the
    HEAD of the given directory, not of the repository at all.

- 0.01 Initial release